# installer

./: CMakeLists.txt  Makefile  README.md  installer.py  obsidianos-installer.desktop
src/: Common.cpp  Common.h  InstallWorker.cpp  InstallWorker.h  ObsidianOSInstaller.cpp  ObsidianOSInstaller.h  Pages.cpp  Pages.h  UIComponents.cpp  UIComponents.h  main.cpp
